--- a/install
+++ b/install
@@ -1,13 +1,7 @@
 #!/bin/bash
 
-# Use the -a flag if you want all the configs I use
-
-dotfiles=(".Xresources")
+dotfiles=(".xinitrc .Xresources")
 configs=("i3" "i3status" "nvim")
-
-echo ""
-echo "This script assumes that you have none of the wanted config files, and will not overwrite existing ones."
-echo ""
 
 for i in ${dotfiles[@]}; do
     echo "Symlinking $i..."
