--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 dotfiles=(".bashrc .xinitrc .Xresources")
-configs=("nvim" "i3" "i3status")
+configs=("nvim i3 i3status")
 
 for i in ${dotfiles[@]}; do
     echo "Symlinking $i..."
