--- a/install
+++ b/install
@@ -1,16 +1,39 @@
 #!/bin/bash
 
-dotfiles=(".vimrc" ".bashrc" ".xmonad" ".xmobar" ".xinitrc" ".Xresources")
+dotfiles=(".vimrc" ".bashrc" ".autostart" ".xinitrc" ".Xresources" ".tmux.conf")
 configs=("i3" "i3status")
+xorgconfs=("40-libinput.conf")
+force=""
 
+if [ "$1" == "-f" ]; then
+    force="$1"
+fi
+
+echo "Symlinking to $HOME/"
 for i in "${dotfiles[@]}"; do
-    echo "Symlinking $i..."
-    ln -s $PWD/$i $HOME/
+    echo "    $i"
+    ln -s $force $PWD/$i $HOME/
 done
 
+echo "Symlinking to $HOME/.config/"
 for i in "${configs[@]}"; do
-    echo "Symlinking $i..."
-    ln -s $PWD/$i $HOME/.config/
+    echo "    $i"
+    ln -s $force $PWD/$i $HOME/.config/
 done
+
+echo "Symlinking to /etc/X11/xorg.conf.d/"
+for i in "${xorgconfs[@]}"; do
+    echo "    $i"
+    sudo ln -s $force $PWD/$i /etc/X11/xorg.conf.d/
+done
+
+echo -n "Install packages from the pkglist file (Y/n)? "
+read answer
+
+if [ "$answer" != "${answer#[Nn]}" ]; then
+    echo "Skipping package installation"
+else
+    sudo apt install $(cat pkglist)
+fi
 
 echo "Done!"
