--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-dotfiles=(".vimrc" ".bashrc" ".autostart" ".xinitrc" ".Xresources" ".tmux.conf")
+dotfiles=(".vimrc" ".bashrc" ".xinitrc" ".Xresources" ".tmux.conf")
 configs=("i3" "i3status")
 xorgconfs=("40-libinput.conf")
 force=""
