--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 dotfiles=(".bashrc" ".vimrc" ".tmux.conf")
+xorgconfs=("input.conf")
 force=""
 
 if [ "$1" == "-f" ]; then
@@ -11,6 +12,12 @@ echo "Symlinking to $HOME/"
 for i in "${dotfiles[@]}"; do
     echo "    $i"
     ln -s $force $PWD/$i $HOME/
+done
+
+echo "Symlinking to /etc/X11/xorg.conf.d/"
+for i in "${xorgconfs[@]}"; do
+    echo "    $i"
+    ln -s $force $PWD/$i /etc/X11/xorg.conf.d/
 done
 
 echo -n "Install packages from the pkglist file? [y/N]: "
