Add mouse acceleration config

--- a/install
+++ b/install
@@ -26,8 +26,9 @@ for i in "${dotfiles[@]}"; do
     ln -s $force $PWD/$i $HOME/
 done
 
-echo "Symlinking lightdm config to /etc/lightdm/..."
+echo "Symlinking configs to /etc/.../..."
 sudo ln -s $force $PWD/lightdm-gtk-greeter.conf /etc/lightdm/
+sudo ln -s $force $PWD/50-mouse-acceleration.conf /etc/X11/xorg.conf.d/
 
 echo "Symlinking config folders to $HOME/.config/..."
 ln -s $force $PWD/nvim $HOME/.config/
