--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/bin/bash
 
-dotfiles=(".bashrc" ".tmux.conf")
+#dotfiles=(".bashrc" ".tmux.conf")
+dotfiles=(".tmux.conf")
 force=""
 
 if [ "$1" == "-f" ]; then
@@ -14,33 +15,36 @@ if [ "$answer" != "${answer#[Yy]}" ]; then
     sudo apt install $(cat pkglist)
 fi
 
-echo -n "Open gnome extension urls from the extlist file? [y/N]: "
-read answer
-
-if [ "$answer" != "${answer#[Yy]}" ]; then
-    firefox $(cat extlist)
-fi
+# echo -n "Open gnome extension urls from the extlist file? [y/N]: "
+# read answer
+# 
+# if [ "$answer" != "${answer#[Yy]}" ]; then
+#     firefox $(cat extlist)
+# fi
 
 echo "Symlinking dotfiles to $HOME/..."
 for i in "${dotfiles[@]}"; do
     ln -s $force $PWD/$i $HOME/
 done
 
-echo "Symlinking configs to /etc/.../..."
-sudo ln -s $force $PWD/lightdm-gtk-greeter.conf /etc/lightdm/
-sudo ln -s $force $PWD/50-mouse-acceleration.conf /etc/X11/xorg.conf.d/
+# echo "Symlinking configs to /etc/.../..."
+# sudo ln -s $force $PWD/lightdm-gtk-greeter.conf /etc/lightdm/
+# sudo ln -s $force $PWD/50-mouse-acceleration.conf /etc/X11/xorg.conf.d/
 
 echo "Symlinking config folders to $HOME/.config/..."
 ln -s $force $PWD/nvim $HOME/.config/
 
-echo "Loading GNOME keybindings..."
-dconf load /org/gnome/desktop/input-sources/ < dconfs/input-sources.dconf
-dconf load /org/gnome/desktop/peripherals/mouse/ < dconfs/mouse.dconf
-dconf load /org/gnome/desktop/peripherals/touchpad/ < dconfs/touchpad.dconf
-dconf load /org/gnome/desktop/wm/ < dconfs/wm.dconf
-dconf load /org/gnome/settings-daemon/plugins/media-keys/ < dconfs/media-keys.dconf
-dconf load /org/gnome/shell/extensions/ < dconfs/extensions.dconf
-dconf load /org/gnome/desktop/interface/ < dconfs/interface.dconf
-dconf load /org/gnome/terminal/ < dconfs/terminal.dconf
+# echo "Loading GNOME keybindings..."
+# dconf load /org/gnome/desktop/input-sources/ < dconfs/input-sources.dconf
+# dconf load /org/gnome/desktop/peripherals/mouse/ < dconfs/mouse.dconf
+# dconf load /org/gnome/desktop/peripherals/touchpad/ < dconfs/touchpad.dconf
+# dconf load /org/gnome/desktop/wm/ < dconfs/wm.dconf
+# dconf load /org/gnome/settings-daemon/plugins/media-keys/ < dconfs/media-keys.dconf
+# dconf load /org/gnome/shell/extensions/ < dconfs/extensions.dconf
+# dconf load /org/gnome/desktop/interface/ < dconfs/interface.dconf
+# dconf load /org/gnome/terminal/ < dconfs/terminal.dconf
+
+# echo "Setting GNOME terminal theme..."
+./gnome-terminal-theme
 
 echo "Done!"
