--- a/install
+++ b/install
@@ -1,7 +1,6 @@
 #!/bin/bash
 
-#dotfiles=(".bashrc" ".tmux.conf")
-dotfiles=(".tmux.conf")
+dotfiles=(".bashrc" ".tmux.conf")
 force=""
 
 if [ "$1" == "-f" ]; then
@@ -10,31 +9,28 @@ fi
 
 echo -n "Install packages from the pkglist file? [y/N]: "
 read answer
-
 if [ "$answer" != "${answer#[Yy]}" ]; then
     sudo apt install $(cat pkglist)
 fi
 
-# echo -n "Open gnome extension urls from the extlist file? [y/N]: "
-# read answer
-# 
-# if [ "$answer" != "${answer#[Yy]}" ]; then
-#     firefox $(cat extlist)
-# fi
+echo -n "Install gaming stuff? [y/N]: "
+read answer
+if [ "$answer" != "${answer#[Yy]}" ]; then
+    sudo ./install-gaming
+fi
 
-echo "Symlinking dotfiles to $HOME/..."
+echo "Symlinking dotfiles to $HOME/"
 for i in "${dotfiles[@]}"; do
     ln -s $force $PWD/$i $HOME/
 done
 
-# echo "Symlinking configs to /etc/.../..."
-# sudo ln -s $force $PWD/lightdm-gtk-greeter.conf /etc/lightdm/
+# echo "Symlinking configs to /etc/"
 # sudo ln -s $force $PWD/50-mouse-acceleration.conf /etc/X11/xorg.conf.d/
 
-echo "Symlinking config folders to $HOME/.config/..."
+echo "Symlinking config folders to $HOME/.config/"
 ln -s $force $PWD/nvim $HOME/.config/
 
-# echo "Loading GNOME keybindings..."
+# echo "Loading GNOME keybindings"
 # dconf load /org/gnome/desktop/input-sources/ < dconfs/input-sources.dconf
 # dconf load /org/gnome/desktop/peripherals/mouse/ < dconfs/mouse.dconf
 # dconf load /org/gnome/desktop/peripherals/touchpad/ < dconfs/touchpad.dconf
@@ -44,7 +40,10 @@ ln -s $force $PWD/nvim $HOME/.config/
 # dconf load /org/gnome/desktop/interface/ < dconfs/interface.dconf
 # dconf load /org/gnome/terminal/ < dconfs/terminal.dconf
 
-# echo "Setting GNOME terminal theme..."
-gnome-terminal-themes/ashes-bright
+# echo "Setting GNOME terminal theme"
+# gnome-terminal-themes/ashes-bright
+
+echo "Installing pywal"
+pip3 install pywal
 
 echo "Done!"
